# ground-station-pg

./: .gitmodules  README.md
simulation/: kuba_map_save.pgm  kuba_map_save.yaml  kuba_map_serial.data  my_map_save.pgm  my_map_save.yaml  my_map_serial.data
simulation/.devcontainer/: Dockerfile  devcontainer.json
simulation/config/: gz_robot.sdf
simulation/log/: latest_build
simulation/ros2_sim_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
simulation/ros2_sim_ws/log/: latest_build
simulation/ros2_sim_ws/src/robot_pkg/: CMakeLists.txt  package.xml
simulation/ros2_sim_ws/src/robot_pkg/config/: joystick.yaml  mapper_params_online_async.yaml  robot_sim.rviz
simulation/ros2_sim_ws/src/robot_pkg/description/: gazebo_control.xacro  lidar.xacro  robot_core.xacro
simulation/ros2_sim_ws/src/robot_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
simulation/ros2_sim_ws/src/robot_pkg/install/robot_pkg/share/robot_pkg/: package.dsv  package.ps1  package.sh
simulation/ros2_sim_ws/src/robot_pkg/install/robot_pkg/share/robot_pkg/config/: joystick.yaml  robot_sim.rviz
simulation/ros2_sim_ws/src/robot_pkg/install/robot_pkg/share/robot_pkg/launch/: robot_urdf.launch.py
simulation/ros2_sim_ws/src/robot_pkg/launch/: joystick.launch.py  joystick_kuba.launch.py  launch_sim.launch.py
simulation/ros2_sim_ws/src/robot_pkg/log/: latest_build
simulation/ros2_sim_ws/src/robot_pkg/src/: uart_publisher.cpp
simulation/ros2_sim_ws/src/robot_pkg/worlds/: obstacle.world  world1.sdf
simulation/turtlebot3_ws/install/: setup.sh  (+1 more)
(+159 files in other folders)
